--- a/Capstone_coursera.ipynb
+++ b/Capstone_coursera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -14,8 +14,11 @@
     }
    ],
    "source": [
+    "# This notebook is for the Capstone Project on Coursera\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "print (\"Hello Capstone Project Course\")"
    ]
   },
